--- a/core/style.css
+++ b/core/style.css
@@ -77,16 +77,17 @@ body, select, input, textarea {
   color: #444;
   /* set your base font here, to apply evenly 
   font-family: Arial, Georgia, serif; */
-  font: 16px/24px Arial, Verdana, Helvetica, sans-serif;
+  font: 16px/24px Helvetica, Arial, Verdana, sans-serif;
 }
 
 /* put in strange text stroke for AA in chrome */
 h1,h2,h3,h4,h5,h6 { -webkit-text-stroke: 1px transparent; font-weight: bold; font-family: Garamond, Georgia, serif; }
 h1 a, h1 a:active, h1 a:visited, h2 a, h2 a:active, h2 a:visited { color: #444; }
 h1 a:hover, h2 a:hover { color: #f0b02a; }
-h1 { font-size: 68px; line-height: 72px; letter-spacing: -1px; color: #f0b02a; text-transform: uppercase; }
+/* h1 { font-size: 68px; line-height: 72px; letter-spacing: -1px; color: #f0b02a; text-transform: uppercase; } */
+h1 { font-size: 42px; line-height: 48px; letter-spacing: -1px; color: #f0b02a; text-transform: uppercase; }
 h2 { font-size: 42px; line-height: 48px; letter-spacing: -1px; color: #444; text-transform: uppercase; }
-h3 { font: 26px/36px Arial, Verdana, Helvetica, sans-serif; color: #444; text-transform: lowercase; }
+h3 { font: 26px/36px Helvetica, Arial, Verdana, sans-serif; color: #444; text-transform: lowercase; }
 
 /* always force a scrollbar in non-IE */ 
 html { overflow-y: scroll; }
@@ -100,15 +101,18 @@ ul, ol { margin-left: 1.8em; }
 ol { list-style-type: decimal; }
 
 /* Navigation Setup */
-nav { background-color:#333; display:block; position: absolute; right: 52px; bottom: 0px; z-index: 10000; 
-	  -moz-border-radius-topright: 6px; border-top-right-radius: 6px; -moz-border-radius-topleft: 6px; border-top-left-radius: 6px;  }
+nav { 
+    background-color:#333; display:block; position: absolute; right: 52px; bottom: 0px; z-index: 10000; 
+	-moz-border-radius-topright: 6px; border-top-right-radius: 6px; -moz-border-radius-topleft: 6px; border-top-left-radius: 6px;
+	line-height: 20px; font-size: 14px;
+}
 nav ul, nav li { margin: 0; } 
 nav ul li { float:left; padding: 5px;  border-right: 1px solid #222;}
 nav ul li.parentNav { padding: 5px 12px 5px 5px; }
 nav ul li:last-child { border-right: none; }
 nav ul.navigation li.parentNav > a { background: url('/images/arrow.gif') no-repeat center right; }
-nav ul li a, nav ul li a:active, nav ul li a:visited { display:block; padding:3px 8px; color: #DDD;}
-nav ul.navigation li.parentNav a, nav ul.navigation li.parentNav a:active, nav ul.navigation li.parentNav a:visited { padding:3px 15px 3px 8px; }
+nav ul li a, nav ul li a:active, nav ul li a:visited { display:block; padding:0 8px; color: #DDD;}
+nav ul.navigation li.parentNav a, nav ul.navigation li.parentNav a:active, nav ul.navigation li.parentNav a:visited { padding:0 15px 0 8px; }
 nav ul li a:hover, nav ul li.active a { 
     -moz-border-radius: 5px;
     -webkit-border-radius: 5px;
@@ -145,6 +149,7 @@ nav ul.navigation li ul li a {
     background-color:#222;
     line-height: 16px;
     font-size: 12px;
+    text-transform: none;
     padding: 3px 13px;
     color: #DDD;
     border: 1px solid transparent;
@@ -479,10 +484,10 @@ button {  width: auto; overflow: visible; }
 	1     2      3      4      5      6      7      8      9      10     11     12     13     14     15     16
 	40px  100px  160px  220px  280px  340px  400px  460px  520px  580px  640px  700px  760px  820px  880px  940px	
 */
-body { background-color: #FFF; }
+body { background-color: #F0F0F0; /* background: #E1E2DA url('/images/bg-tile2.png') top left fixed repeat; */ }
 
 #header, #subheader, #subheader a, #subheader a:active, #subheader a:visited {color: #CCC;}
-#footer, #footer a, #footer a:active, #footer a:visited {color: #888;}
+#footer, #footer a, #footer a:active, #footer a:visited {color: #808080;}
 #subheader a:hover, #footer a:hover { color:#f0b02a; }
 
 #header_wrapper, #subheader_wrapper, #footer_wrapper {
@@ -494,7 +499,14 @@ body { background-color: #FFF; }
 }
 #header_wrapper { background: url('/images/header_bg.png') repeat-x; }
 #subheader_wrapper { display: none; background-color: #181818; }
-#footer_wrapper { background-color: #181818; }
+#footer_wrapper { background-color: #F0F0F0; }
+
+#content_wrapper {
+    display: block;
+    background-color: #FFF;
+    padding: 0;
+    width: 100%;
+}
 
 #header {
 	padding: 0 10px;
@@ -520,13 +532,6 @@ body { background-color: #FFF; }
 }
 
 #footer {padding: 0;}
-
-#content {
-	background-color: #FFF;
-	/* -moz-border-radius: 6px;
-	-webkit-border-radius: 6px;
-	border-radius: 6px; */
-}
 
 .col {
 	margin-left:10px; 
@@ -575,120 +580,7 @@ body { background-color: #FFF; }
 .col_15{ width:880px; }
 .col_16{ width:940px; }
 
-/* maybe to use on elements like input fields 
-.width_1 {	width:40px;  }
-.width_2 {	width:100px; }
-.width_3 {	width:160px; }
-.width_4 {	width:220px; }
-.width_5 {	width:280px; }
-.width_6 {	width:340px; }
-.width_7 {	width:400px; }
-.width_8 {	width:460px; }
-.width_9 {	width:520px; }
-.width_10{	width:580px; }
-.width_11{	width:640px; }
-.width_12{	width:700px; }
-.width_13{	width:760px; }
-.width_14{	width:820px; }
-.width_15{	width:880px; }
-.width_16{	width:940px; } */
-
 /* END GRID SYSTEM */
-
-
-/* ORIGINAL DEFINE FRAMEWORK */
-/*	13-column layout
-	52 px columns, 32 px gutters, 52 px margins, 1164 px total (extra space for scrollbars)
-	---------------------------------------------------------------------------------------
-	1     2      3      4      5      6      7      8      9      10     11     12     13
-	52px  136px  220px  304px  388px  472px  556px  640px  724px  808px  892px  976px  1060px
-*/
-/* body { background-color: #181818; }
-
-#header, #subheader, #subheader a, #subheader a:active, #subheader a:visited, #footer, #footer a, #footer a:active, #footer a:visited {color: #999;}
-#subheader a:hover, #footer a:hover { color:#f0b02a; }
-
-#header_wrapper, #subheader_wrapper {
-	display: block;
-	background-color: #000;	
-	padding: 0;
-	width: 100%;
-}
-
-#subheader_wrapper { background-color: transparent; }
-
-#header {
-	padding: 0 52px;
-	margin: 0 auto;
-	width: 1060px;
-	position: relative;
-	background-color: transparent;
-}
-
-#subheader {
-	padding: 14px 52px;
-	margin: 0 auto;
-	height: 24px;
-	width: 1060px;
-	background-color: transparent;
-}
-
-#content, #footer {
-	position: relative;
-	margin: 0 auto;
-	padding: 36px 36px; 
-	width: 1092px;
-}
-
-#footer {padding: 0px 36px;}
-
-#content {
-	background-color: #FFF;
-	-moz-border-radius: 6px;
-	-webkit-border-radius: 6px;
-	border-radius: 6px;    
-}
-
-.col {
-	margin-left:16px; 
-	margin-right:16px;	
-	display: inline;
-	overflow: hidden;
-	float: left;
-	position: relative;
-}
-
-.row {
-	width: 1092px;
-	margin: 0 0;
-	padding: 16px 0;
-	overflow: hidden;
-}
-
-.row .row {
-	margin: 0 -16px;
-	width: auto;
-	padding: 32px 0 0 0;
-	display: inline-block;
-}
-
-.col_1 { width:52px;  }
-.col_2 { width:136px; }
-.col_3 { width:220px; }
-.col_4 { width:304px; }
-.col_5 { width:388px; }
-.col_6 { width:472px; }
-.col_7 { width:556px; }
-.col_8 { width:640px; }
-.col_9 { width:724px; }
-.col_10{ width:808px; }
-.col_11{ width:892px; }
-.col_12{ width:976px; }
-.col_13{ width:1060px; }
-*/
-
-/* END GRID SYSTEM */
-
 
 
 /*
